--- a/.repos.yaml
+++ b/.repos.yaml
@@ -13,12 +13,16 @@ repositories:
     version: foxy-devel
   ros2_control:
     type: git
-    url: https://github.com/ros-controls/ros2_control.git
-    version: master
+    #url: https://github.com/ros-controls/ros2_control.git
+    url: https://github.com/destogl/ros2_control.git
+    #version: master
+    version: tests_with_demo_repos
   ros2_controllers:
     type: git
-    url: https://github.com/ros-controls/ros2_controllers.git
-    version: master
+    #url: https://github.com/ros-controls/ros2_controllers.git
+    url: https://github.com/destogl/ros2_controllers.git
+    #version: master
+    version: a36fca2
   srdfdom:
     type: git
     url: https://github.com/ros-planning/srdfdom.git
