--- a/ur_robot_driver/resources/ur5_system_position_only.yaml
+++ b/ur_robot_driver/resources/ur5_system_position_only.yaml
@@ -8,6 +8,9 @@ controller_manager:
     joint_state_controller:
       type: joint_state_controller/JointStateController
 
+    force_sensor_state_controller:
+      type: ur_controllers/ForceTorqueStateController
+
 forward_command_controller_position:
   ros__parameters:
     joints:
