--- a/ur_robot_driver/resources/ur5_system_position_only.yaml
+++ b/ur_robot_driver/resources/ur5_system_position_only.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 2  # Hz
+    update_rate: 100  # Hz
 
     forward_command_controller_position:
       type: forward_command_controller/ForwardCommandController
@@ -8,8 +8,24 @@ controller_manager:
     joint_state_controller:
       type: joint_state_controller/JointStateController
 
-    force_sensor_state_controller:
-      type: ur_controllers/ForceTorqueStateController
+    ur_joint_trajectory_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+ur_joint_trajectory_controller:
+  ros__parameters:
+    joints:
+      - shoulder_pan_joint
+      - shoulder_lift_joint
+      - elbow_joint
+      - wrist_1_joint
+      - wrist_2_joint
+      - wrist_3_joint
+    state_publish_rate: 100.0
+    action_monitor_rate: 20.0
+    allow_partial_joints_goal: false
+    constraints:
+      stopped_velocity_tolerance: 0.01
+      goal_time: 0.0
 
 forward_command_controller_position:
   ros__parameters:
