--- a/.repos.yaml
+++ b/.repos.yaml
@@ -13,7 +13,8 @@ repositories:
     version: foxy-devel
   ros2_control:
     type: git
-    url: https://github.com/ros-controls/ros2_control.git
+    #url: https://github.com/ros-controls/ros2_control.git
+    url: https://github.com/livanov93/ros2_control.git
     version: master
   ros2_controllers:
     type: git
@@ -30,5 +31,21 @@ repositories:
   warehouse_ros:
     type: git
     url: https://github.com/ros-planning/warehouse_ros.git
+    version: ros2
+  warehouse_ros_mongo:
+    type: git
+    url: https://github.com/ros-planning/warehouse_ros_mongo
+    version: ros2
+  moveit2:
+    type: git
+    url: https://github.com/ros-planning/moveit2
+    version: main
+  moveit_msgs:
+    type: git
+    url: https://github.com/ros-planning/moveit_msgs
+    version: ros2
+  moveit_resources:
+    type: git
+    url: https://github.com/ros-planning/moveit_resources
     version: ros2
 
